Added icons and texts to watch face

--- a/wearable/src/main/res/values/strings.xml
+++ b/wearable/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Sunshine</string>
-    <string name="sunshine_digital">Sunshine Digital</string>
+    <string name="sunshine_digital">A Sunshine Digital</string>
 </resources>
